<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:height="60dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:height="60dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:height="60dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/maleChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/male"
            android:textColor="#651FFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/femaleChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/female"
            android:textColor="#F480FC"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:width="220dp"
        android:height="70dp"
        android:text="@string/register"
        android:textColor="#00E676"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/goToLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:width="160dp"
        android:height="60dp"
        android:visibility="gone"
        android:text="@string/go_to_login" />

</LinearLayout>
